# THU

./: .gitattributes  .gitignore  README.md  experiment.ipynb  ioutest.ipynb  package-lock.json  package.json  pyproject.toml  server.py
configs/: experiment_config.yaml  prompts.yaml  query_txt_config.yaml
data/: aiact.txt  nationalparks_europe.txt  top_generative_use_cases.txt
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css  index.js
results/asd/: experiment_log.csv
results/asdf/: experiment_log.csv
results/exp01/: experiment_log.csv
src/: main.py
src/api/: client.py  mistral_api.txt
src/core/: orchestrator.py  orchestrator_DroPE.py  orchestrator_TwoWay.py
src/data_loader/: preprocessor.py  preprocessor_.py  preprocessor__.py
src/utils/: logger.py
